--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <nav class="navbar navbar-light bg-light">
@@ -61,7 +62,7 @@
         <div class="row d-flex justify-content-center mt-3">
           <div class="col-1">
             <!-- Nav tabs -->
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <ul class="nav nav-tabs border-0" id="myTab" role="tablist">
               <li class="nav-item active" role="presentation">
                 <button class="nav-link" id="messages-tab" data-bs-toggle="tab" data-bs-target="#messages" type="button" role="tab" aria-controls="messages" aria-selected="false">
                   <i class="fa-solid fa-table-cells"></i>
@@ -80,68 +81,66 @@
         <div class="tab-content">
           <div class="tab-pane show active" id="messages" role="tabpanel" aria-labelledby="messages-tab">
             <div class="row d-flex justify-content-center mt-3">
-              <div class="col-3">
+              <div class="col-9 col-md-3">
                 <div class="card bg-dark text-white">
                   <img class="card-img mx-auto d-block" src="./img/1.jpg" />
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-9 col-md-3">
                 <div class="card bg-dark text-white">
                   <img class="card-img mx-auto d-block" src="./img/2.jpg" />
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-9 col-md-3">
                 <div class="card bg-dark text-white">
                   <img class="card-img mx-auto d-block" src="./img/3.jpg" />
                 </div>
               </div>
             </div>
             <div class="row d-flex justify-content-center mt-3">
-              <div class="col-3">
+              <div class="col-9 col-md-3">
                 <div class="card bg-dark text-white">
                   <img class="card-img mx-auto d-block" src="./img/1.jpg" />
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-9 col-md-3">
                 <div class="card bg-dark text-white">
                   <img class="card-img mx-auto d-block" src="./img/2.jpg" />
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-9 col-md-3">
                 <div class="card bg-dark text-white">
                   <img class="card-img mx-auto d-block" src="./img/3.jpg" />
                 </div>
               </div>
-            </div>
-            <div class="row d-flex justify-content-center mt-3">
-              <div class="col-3">
+            </div><div class="row d-flex justify-content-center mt-3">
+              <div class="col-9 col-md-3">
                 <div class="card bg-dark text-white">
                   <img class="card-img mx-auto d-block" src="./img/1.jpg" />
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-9 col-md-3">
                 <div class="card bg-dark text-white">
                   <img class="card-img mx-auto d-block" src="./img/2.jpg" />
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-9 col-md-3">
                 <div class="card bg-dark text-white">
                   <img class="card-img mx-auto d-block" src="./img/3.jpg" />
                 </div>
               </div>
-            </div>
-            <div class="row d-flex justify-content-center mt-3">
-              <div class="col-3">
+            </div><div class="row d-flex justify-content-center mt-3">
+              <div class="col-9 col-md-3">
                 <div class="card bg-dark text-white">
                   <img class="card-img mx-auto d-block" src="./img/1.jpg" />
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-9 col-md-3">
                 <div class="card bg-dark text-white">
                   <img class="card-img mx-auto d-block" src="./img/2.jpg" />
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-9 col-md-3">
                 <div class="card bg-dark text-white">
                   <img class="card-img mx-auto d-block" src="./img/3.jpg" />
                 </div>
